--- a/GameBox/GeneralClass/FFHomeClass/View/FFGameGuideCell.xib
+++ b/GameBox/GeneralClass/FFHomeClass/View/FFGameGuideCell.xib
@@ -13,11 +13,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFRaidersTableCell" rowHeight="141" id="KGk-i7-Jjw" customClass="FFRaidersTableCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFGameGuideCell" rowHeight="141" id="KGk-i7-Jjw" userLabel="FFGameGuideCell" customClass="FFGameGuideCell">
             <rect key="frame" x="0.0" y="0.0" width="525" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="525" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="525" height="119.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUg-hr-hN5">
