--- a/GameBox/GeneralClass/FFGuideAndActivityClass/View/FFGameGuideCell.xib
+++ b/GameBox/GeneralClass/FFGuideAndActivityClass/View/FFGameGuideCell.xib
@@ -13,74 +13,56 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFGameGuideCell" rowHeight="141" id="KGk-i7-Jjw" userLabel="FFGameGuideCell" customClass="FFGameGuideCell">
-            <rect key="frame" x="0.0" y="0.0" width="525" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFGameGuideCell" rowHeight="176" id="KGk-i7-Jjw" userLabel="FFGameGuideCell" customClass="FFGameGuideCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="525" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUg-hr-hN5">
-                        <rect key="frame" x="96" y="10" width="421" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="BvL-wo-BY2"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yYm-ev-TJH">
-                        <rect key="frame" x="8" y="10" width="80" height="80"/>
+                        <rect key="frame" x="8" y="9" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="3Ar-I4-g7C"/>
-                            <constraint firstAttribute="height" constant="80" id="SZK-Gr-Caq"/>
+                            <constraint firstAttribute="width" constant="60" id="4dd-iS-lhB"/>
+                            <constraint firstAttribute="height" constant="60" id="ea5-fd-3uZ"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOy-DT-NKE">
-                        <rect key="frame" x="96" y="48" width="421" height="42"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3p-Rc-Nnx">
+                        <rect key="frame" x="76" y="49" width="33" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="v9S-V2-U7Y"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x6e-AM-fxF">
-                        <rect key="frame" x="8" y="98" width="42" height="13.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ami-7F-sFE">
+                        <rect key="frame" x="76" y="9" width="37.5" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="53O-78-Fh0"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aqx-Xg-qX0">
-                        <rect key="frame" x="459.5" y="96" width="35.5" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="EUg-hr-hN5" firstAttribute="leading" secondItem="yYm-ev-TJH" secondAttribute="trailing" constant="8" id="2I6-Te-ol7"/>
-                    <constraint firstAttribute="trailing" secondItem="bOy-DT-NKE" secondAttribute="trailing" constant="8" id="7ZV-pG-RvK"/>
-                    <constraint firstItem="bOy-DT-NKE" firstAttribute="top" secondItem="EUg-hr-hN5" secondAttribute="bottom" constant="8" id="KTh-gF-v0t"/>
-                    <constraint firstItem="aqx-Xg-qX0" firstAttribute="centerY" secondItem="x6e-AM-fxF" secondAttribute="centerY" id="Lnu-xy-U3F"/>
-                    <constraint firstItem="bOy-DT-NKE" firstAttribute="bottom" secondItem="yYm-ev-TJH" secondAttribute="bottom" id="UlF-5e-sh3"/>
-                    <constraint firstItem="bOy-DT-NKE" firstAttribute="leading" secondItem="yYm-ev-TJH" secondAttribute="trailing" constant="8" id="W9e-AI-bEs"/>
-                    <constraint firstItem="x6e-AM-fxF" firstAttribute="top" secondItem="yYm-ev-TJH" secondAttribute="bottom" constant="8" id="ZFO-SK-TYL"/>
-                    <constraint firstAttribute="trailing" secondItem="EUg-hr-hN5" secondAttribute="trailing" constant="8" id="bab-Ao-KFe"/>
-                    <constraint firstItem="yYm-ev-TJH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="cYr-WY-88m"/>
-                    <constraint firstAttribute="bottom" secondItem="x6e-AM-fxF" secondAttribute="bottom" constant="8" id="ibt-FC-tiN"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="aqx-Xg-qX0" secondAttribute="trailing" constant="10" id="oYb-ky-OEG"/>
-                    <constraint firstItem="x6e-AM-fxF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="tw7-9s-hgF"/>
-                    <constraint firstItem="yYm-ev-TJH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="u9J-BK-66e"/>
-                    <constraint firstItem="EUg-hr-hN5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="zC6-nv-0Fa"/>
+                    <constraint firstItem="Ami-7F-sFE" firstAttribute="leading" secondItem="yYm-ev-TJH" secondAttribute="trailing" constant="8" id="2zT-pK-r4U"/>
+                    <constraint firstItem="yYm-ev-TJH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Dd9-3f-Nam"/>
+                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="Ami-7F-sFE" secondAttribute="trailing" constant="8" id="bNC-2E-ZRs"/>
+                    <constraint firstItem="C3p-Rc-Nnx" firstAttribute="bottom" secondItem="yYm-ev-TJH" secondAttribute="bottom" id="ggB-hJ-Qxt"/>
+                    <constraint firstItem="yYm-ev-TJH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hFT-qh-kj9"/>
+                    <constraint firstItem="C3p-Rc-Nnx" firstAttribute="top" secondItem="Ami-7F-sFE" secondAttribute="bottom" id="hmh-Wf-zzC"/>
+                    <constraint firstItem="C3p-Rc-Nnx" firstAttribute="leading" secondItem="yYm-ev-TJH" secondAttribute="trailing" constant="8" id="jg8-Vp-bnr"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="authorLabel" destination="EUg-hr-hN5" id="pSk-KT-YYV"/>
-                <outlet property="contentLabel" destination="bOy-DT-NKE" id="JzU-pX-uKj"/>
                 <outlet property="gameLogoImageView" destination="yYm-ev-TJH" id="Zww-kF-Cmt"/>
-                <outlet property="gameNameLabel" destination="x6e-AM-fxF" id="o06-Ag-zih"/>
-                <outlet property="timeLabel" destination="aqx-Xg-qX0" id="Vn0-a4-Wxk"/>
+                <outlet property="nameLabel" destination="Ami-7F-sFE" id="CAw-Uj-Tky"/>
+                <outlet property="timeLabel" destination="C3p-Rc-Nnx" id="C4F-Im-nDa"/>
             </connections>
-            <point key="canvasLocation" x="105.5" y="102"/>
+            <point key="canvasLocation" x="104.5" y="113"/>
         </tableViewCell>
     </objects>
 </document>
